# learning-opencl

./: CMakeLists.txt
include/: programFactory.h  utils.h
include/test/: model.h
src/: benchmark.cpp  model.cpp  model.h  offline_compiler.cpp  printDeviceInfo.h  programFactory.cpp  vec_reduce.cpp  vec_reduce.h  vec_sum.cpp  vec_sum.h
src/kernel/: model.cl  reduce.cl  vec_sum.cl
